--- a/doc/架构介绍和难点分析.md
+++ b/doc/架构介绍和难点分析.md
@@ -5,8 +5,8 @@
 # MiniFTP说明手册
 
 ## 系统架构
+![image](https://github.com/HONGYU-LEE/MiniFTP/blob/master/doc/%E7%B3%BB%E7%BB%9F%E9%80%BB%E8%BE%91%E6%9E%B6%E6%9E%84.png)
 
-![系统逻辑架构](C:\Users\Administrator\Desktop\github\MiniFTP\doc\系统逻辑架构.png)
 
 为了保证各个客户端之间具有**独立性以及健壮性**，我选择了使用**多进程**来实现。
 
@@ -17,7 +17,7 @@
 
 
 
-![运作流程](C:\Users\Administrator\Desktop\github\MiniFTP\doc\运作流程.png)
+![运作流程](https://github.com/HONGYU-LEE/MiniFTP/blob/master/doc/%E8%BF%90%E4%BD%9C%E6%B5%81%E7%A8%8B.png)
 
 对于每一个客户端连接，都会通过一个**进程组（nobody进程、ftp服务进程）**来进行管理
 
@@ -45,11 +45,11 @@
 
 ​																	客户端受到防火墙或者NAT的干扰
 
-![](file:///C:\Users\ADMINI~1\AppData\Local\Temp\ksohtml972\wps3.jpg)
+![image](https://github.com/HONGYU-LEE/MiniFTP/blob/master/doc/%E5%9B%BE%E7%89%871.png)
 
 ​																	服务器受到防火墙或者NAT的干扰
 
-![img](file:///C:\Users\ADMINI~1\AppData\Local\Temp\ksohtml972\wps4.jpg)
+![image](https://github.com/HONGYU-LEE/MiniFTP/blob/master/doc/%E5%9B%BE%E7%89%873.png)
 
 所以设计了**主动****和**被动**两种连接模式来解决上面那两种情况**
 
@@ -59,7 +59,7 @@
 
 **主动模式用于解决服务器受到防火墙或者NAT干扰的情况**，既然客户端的连接请求会被拒绝，那就**由服务器来主动连接客户端**
 
-![img](file:///C:\Users\ADMINI~1\AppData\Local\Temp\ksohtml972\wps5.jpg)
+![image](https://github.com/HONGYU-LEE/MiniFTP/blob/master/doc/%E5%9B%BE%E7%89%874.png)
 
 ​							此时，即使服务器这边存在干扰，也能通过主动模式来成功建立起数据连接
 
@@ -79,7 +79,7 @@
 
 
 
-![img](file:///C:\Users\ADMINI~1\AppData\Local\Temp\ksohtml972\wps2.jpg)
+![img](https://github.com/HONGYU-LEE/MiniFTP/blob/master/doc/%E5%9B%BE%E7%89%872.png)
 
 ​									此时，即使客户端这边存在干扰，也能通过被动模式来成功建立起数据连接
 
@@ -332,5 +332,4 @@ struct spwd
 ---------
 
 其他具体的实现流程请参考源代码，在这里就不多赘述了，本博客只介绍了其中比较关键且难理解的地方与整体的逻辑架构设计思路
-
 https://github.com/HONGYU-LEE/MiniFTP
